# hmmer-rs

./: Cargo.toml  out.txt
src/: hmm.rs  hmmsearch.rs  lib.rs
tests/: test.rs
